# ReaSyn

./: .gitignore  README.md  env.yml  pyproject.toml
configs/: finetune.yml  train.yml
data/: jnk3_hit.txt  mols_to_filter.txt  test_zinc250k.txt
data/building_blocks/: README.md  building_blocks_zinc250k.txt
data_card/: building_blocks_zinc250k_card.md  test_zinc250k_card.md
license_data/: building_blocks_zinc250k  test_zinc250k
license_thirdparty/: third-party.txt
model_card/: bias_subcard.md  explainability_subcard.md  model_card.md  privacy_subcard.md  safety_security_subcard.md
reasyn/chem/: featurize.py  fpindex.py  matrix.py  mol.py  reaction.py  stack.py
reasyn/data/: collate.py  common.py  dataset.py
reasyn/models/: classifier_head.py  decoder.py  encoder.py  positional_encoding.py  reasyn.py  regressor.py
reasyn/sampler/: parallel.py  state_pool.py
reasyn/trainer/: autoregressive.py  finetune.py
reasyn/utils/: crossover.py  hparams_tdc.yml  mutate.py  train.py
scripts/: convert_processed_1.py  convert_processed_2.py  eval_hit.py  eval_recon.py  finetune.py  optimize_tdc.py  preprocess.py  sample.py  sample_one.py  train.py
